--- a/html/contact.html
+++ b/html/contact.html
@@ -52,6 +52,7 @@
     </nav>
     <!-- end nav -->
 
+    <!-- header -->
     <header class="flex header-sm">
         <div class="container">
             <div class="header-title">
@@ -120,8 +121,6 @@
                 <a href="index.html" class="site-brand">
                     NTVu_images
                 </a>
-                <!-- <p class="text">Đoạn văn bản</p> -->
-                <!-- <h2>Copyright @2023</h2> -->
                 <p>Copyright @2023</p>
             </div>
 
@@ -179,7 +178,6 @@
         </div>
     </footer>
 
-    <!-- js -->
     <script src="/js/script.js"></script>
     <script></script>
 </body>
